# embed

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  windows-msvc.yml  windows-msys2.yml
include/: embed.hpp
src/: bin2c.c  embed.cpp.in
tests/: CMakeLists.txt
tests/duplicate/: CMakeLists.txt
tests/multiple/: CMakeLists.txt  multiple.cpp
tests/separate/: CMakeLists.txt  separate.cpp
tests/text/: CMakeLists.txt  text.cpp
